# tech-challenge-recsys

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml
.github/workflows/: deploy-mlflow.yml
deploy/: mlflow.Dockerfile
docs/: deploy_azure.md  model_card.md  video_script.md
metrics/: .gitignore  eval_metrics.json
models/: .gitignore
scripts/: download_data.py  promote_model.py  validate_env.py
src/recsys/: config.py
src/recsys/data/: interaction_dataset.py  interaction_matrix.py  loaders.py  negative_sampling.py
src/recsys/evaluation/: evaluator.py  metrics.py
src/recsys/mlflow_utils/: registry.py  tracking.py
src/recsys/models/: base.py  factory.py  knn_baseline.py  mlp_recommender.py  mlp_wrapper.py  popularity_baseline.py  svd_baseline.py
src/recsys/pipeline/: evaluate.py  feature_eng.py  preprocess.py  train.py
src/recsys/training/: trainer.py
src/recsys/utils/: io.py  logger.py  seeding.py
tests/: conftest.py  test_baselines.py  test_feature_eng.py  test_metrics.py  test_mlp_recommender.py  test_models_factory.py  test_preprocess.py
