[tool.poetry]
name = "tech-challenge-recsys"
version = "0.1.0"
description = "Tech Challenge Fase 2 - Sistema de recomendacao de produtos com PyTorch, DVC, MLflow e Docker"
authors = ["Luiz Carvalho"]
readme = "README.md"
packages = [{ include = "recsys", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
torch = "^2.4"
scikit-learn = "^1.5"
mlflow = ">=2.9,<3.0"
dvc = "^3.55"
pandas = "^2.2"
numpy = "^1.26"
scipy = "^1.13"
pyarrow = "^17.0"
pydantic = "^2.9"
pydantic-settings = "^2.5"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
ruff = "^0.6"
pre-commit = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
