[project]
name = "tech-challenge-recsys"
version = "0.1.0"
description = "Tech Challenge Fase 2 - Sistema de recomendacao de produtos com PyTorch, DVC, MLflow e Docker"
authors = [{ name = "Luiz Carvalho" }]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dynamic = ["dependencies"]

[tool.poetry]
packages = [{ include = "recsys", from = "src" }]

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
torch = { version = "^2.4", source = "pytorch-cpu" }
scikit-learn = "^1.5"
mlflow = ">=2.9,<3.0"
dvc = "^3.55"
pandas = "^2.2"
numpy = "^2.1"
scipy = "^1.16"
pyarrow = "^19.0"
pydantic = "^2.9"
pydantic-settings = "^2.5"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
ruff = "^0.6"
pre-commit = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
